<?xml version="1.0"?>
<package format="2">
  <name>field_vis</name>
  <version>0.0.0</version>
  <description>The field_vis package</description>

  <maintainer email="southriver@todo.todo">southriver</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>

  </export>
</package>
